# loop-engineering

./: .gitignore  LICENSE  README.md  agent_logging.py  agent_loop.py  agent_secrets.py  agent_shell.py  audit_replay.py  phase0_single_call.py  phase2_harness.py  pyproject.toml  ralph_audit.jsonl  ralph_loop.py  real_repo_loop.py  requirements.txt  safe_harness.py  sample.txt  spec.md  summary.txt  test_agent_logging.py  test_agent_secrets.py  test_agent_shell.py  test_api_error_handling.py  test_audit_replay.py  test_cli_args.py  test_greet.py  test_ralph_verification.py  test_run_shell_sandbox.py
.claude/: settings.json
.github/workflows/: tests.yml
